--- a/style/table.css
+++ b/style/table.css
@@ -13,9 +13,12 @@
 
 .content-table {
     border-collapse: collapse;
-    margin: 25px 0;
+    margin: 25px auto;
     font-size: 0.9em;
-    min-width: 400px;
+    width:auto;
+    max-width: 95vw;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
