--- a/style/style.css
+++ b/style/style.css
@@ -7,8 +7,9 @@
 
 body {
     font-family: "Poppins", sans-serif;
+    background-color:#fff!important;
+    overflow-x: hidden;
 }
-
 nav {
     background-color:#1a3c92;
     position:sticky;
@@ -73,38 +74,18 @@ nav {
     display:none;
 }
 
-
-header {
-    height:50%;
-    display: flex;
+#alert-container {
+    display:none;
     flex-direction: column;
-    align-items: center;
-    margin-top:50px;
-    border-bottom: #1a3c92 solid;
-
-
-}
-
-header h1 {
-    margin-bottom: 30px;
+    line-height: 2rem;
+    font-size:1rem;
+    margin:10px 15%;
+    padding: 8px 24px;
+    color: #2a63d9;
     text-align: center;
-}
-#matriculeForm label, #matriculeForm input, #matriculeForm button {
-    display: flex;
-    margin-left:auto;
-    margin-right:auto;
-    margin-bottom:20px;
-}
-
-#matriculeForm input{
-    text-align:center;
-    padding:10px;
-    width: 100px;
-    font-size:1.5em;
-    border-radius:10px;
-}
-#matriculeForm button {
-    margin-bottom: 40px;
+    background-color: #e7efff;
+    border-radius:5px;
+    border: 1px solid #3a2f75;
 }
 
 footer {
@@ -120,11 +101,10 @@ footer {
 }
 
 footer p {
-    margin:20px;
     color:#FFF;
     font-size:1.2rem;
     text-align:center;
-    margin-bottom: 25px;
+    margin: 20px 20px 25px;
 }
 
 footer a {
@@ -147,10 +127,10 @@ body::-webkit-scrollbar {
     width: 0;
 }
 #about-container  section:nth-child(even), #howtouse-container section:nth-child(even){
-    background: #baecf0;
+    background: #e7ecef;
 }
 #about-container  section:nth-child(odd), #howtouse-container  section:nth-child(odd){
-    background: rgba(92, 209, 255, 0.69);
+    background: #caf0f8;
 }
 .about, .howtouse {
     padding : 80px 25%;
@@ -164,6 +144,71 @@ body::-webkit-scrollbar {
     text-align:justify;
 }
 
+#consigne-saisie-matricule {
+    text-align:center;
+    justify-content:center;
+}
+
+#matriculeInputSpan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:auto;
+    margin:0 25%;
+
+}
+
+#addMatricule {
+    font-size: 2rem;
+    border: none;
+    background:#fff;
+    padding-left:10px;
+    cursor:pointer;
+}
+
+abbr {
+    text-decoration: none;
+}
+
+#calendar-section, #download-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+input[type="color"] {
+    display:none;
+    box-sizing:border-box;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    border:none;
+    height:1.5rem;
+    width:1.3rem;
+    cursor:pointer;
+    background-color: transparent;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border-radius:8px;
+    border:none;
+}
+
+.combination-divider {
+    border-bottom: #1a3c92 solid 1px;
+    padding:30px 0;
+}
+#solo-mode-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#saved-matricule-container {
+    display: inline-flex;
+    justify-content: center;
+}
 
 @media only screen and (max-width:810px){
     nav {
@@ -198,10 +243,10 @@ body::-webkit-scrollbar {
     .about p, .howtouse p{
         font-size:1.15rem;
     }
-    .download-button .button-icon {
-        display:none;
+    #alert-container {
+        margin:10px 5%;
     }
-    span .download-button .button-text{
-        transform:translateY(8px);
+    .button-download {
+        max-width: 80%;
     }
 }
